# cis325-final-part1

./: Dockerfile  FinalProject-Part1.ipynb  pyproject.toml
app/: __init__.py  app.py
app/models/: __init__.py
app/models/compiled/best_model/: MLmodel  conda.yaml  python_env.yaml
app/routes/: predict.py
config/: nginx.conf  uwsgi.ini
mlruns/0/: meta.yaml
mlruns/596768024067625373/: meta.yaml
mlruns/596768024067625373/0d78d48b223b44a7a0435f554bf42485/: meta.yaml
mlruns/596768024067625373/0d78d48b223b44a7a0435f554bf42485/metrics/: f1_class_1  precision_class_1  recall_class_1  test_accuracy
mlruns/596768024067625373/0d78d48b223b44a7a0435f554bf42485/tags/: mlflow.runName
mlruns/596768024067625373/610d6bd886624947a3feac5687610bc3/: meta.yaml
mlruns/596768024067625373/610d6bd886624947a3feac5687610bc3/metrics/: accuracy
mlruns/596768024067625373/610d6bd886624947a3feac5687610bc3/params/: multi_models__model
mlruns/596768024067625373/610d6bd886624947a3feac5687610bc3/tags/: mlflow.log-model.history
mlruns/596768024067625373/92d096fc190a48ba9cb70bd75b4d0e29/: meta.yaml
mlruns/596768024067625373/92d096fc190a48ba9cb70bd75b4d0e29/metrics/: accuracy
mlruns/596768024067625373/92d096fc190a48ba9cb70bd75b4d0e29/params/: multi_models__model
mlruns/596768024067625373/977041902ad74c17b725c2e525e7c51d/: meta.yaml
mlruns/596768024067625373/bcf2399541154fe9a5a0d72f8a02c154/: meta.yaml
mlruns/596768024067625373/c2f2092a176c442990bcf6a09b717ca7/: meta.yaml
paper/: main.tex
terraform/: main.tf  outputs.tf  terraform.tf  variables.tf
(+11 files in other folders)
